welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:4: error: unclosed character literal
      return '10:00'
             ^alarmClock:4: error: Non-zero integral values may not have a leading zero.
      return '10:00'
                 ^alarmClock:4: error: unclosed character literal
      return '10:00'
                   ^alarmClock:6: error: unclosed character literal
      return 'off'
                 ^alarmClock:10: error: unclosed character literal
    	retrun '7:00'
               ^alarmClock:10: error: Non-zero integral values may not have a leading zero.
    	retrun '7:00'
                  ^alarmClock:10: error: unclosed character literal
    	retrun '7:00'
                    ^alarmClock:12: error: unclosed character literal
    	return '10:00'
               ^alarmClock:12: error: Non-zero integral values may not have a leading zero.
    	return '10:00'
                   ^alarmClock:12: error: unclosed character literal
    	return '10:00'
                     ^alarmClock:4: error: ';' expected but something found.
      return '10:00'
             ^alarmClock:6: error: ';' expected but something found.
      return 'off'
                 ^alarmClock:10: error: ';' expected but something found.
    	retrun '7:00'
               ^alarmClock:12: error: ';' expected but something found.
    	return '10:00'
               ^